fix: messages item scrollbar was missing

--- a/src/components/Item/MessagesItem/styles/Item.module.css
+++ b/src/components/Item/MessagesItem/styles/Item.module.css
@@ -27,4 +27,5 @@
 .content {
     composes: content from '../../styles/Item.module.css';
     flex: 1;
+    overflow: auto;
 }
